--- a/style.css
+++ b/style.css
@@ -3,13 +3,67 @@ html {
     font-family: 'Aref Ruqaa', serif;
 }
 
+a:link {
+    color: rgb(0, 91, 2);
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:visited {
+    color: rgb(158, 5, 169);
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(0, 91, 2);
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+a:active {
+    color: rgb(158, 5, 169);
+    background-color: transparent;
+    text-decoration: underline;
+}
+
 .header {
-    margin: 1em;
+    margin: .5em, 1em, .5em, 1em;
     padding: 1em;
-    border-width: 1em;
+    border: 3px solid black;
     background-color: rgb(5, 212, 9);
     text-align: center;
-    font-size: xx-large;
+    font-size: 50px;
     
 }
 
+.button {
+    display: block;
+    margin: .7em auto;
+    padding: 2em;
+    font-size: 85px;
+    font-family: Aref Ruqaa;
+    background-color:rgb(129, 175, 125);
+    border: 15px double rgb(0, 91, 2);
+}
+
+.butt-on {
+    display:block;
+    margin: 2em;
+    padding: 1em;
+    font-size: medium;
+    font-family: Aref Ruqaa;
+    background-color: rgb(129, 175, 125);
+    border: 5px double rgb(0, 91, 2);
+}
+
+.ins-name {
+    width: fit-content;
+    padding: 1em;
+    margin: 2em;
+    border: 5px double black;
+    background-color: white;
+    display: flex;
+    flex-flow: column;
+    font-size: larger;
+}
