--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html {
     font-family: 'Aref Ruqaa', serif;
 }
 
+* {
+    box-sizing: border-box
+}
+
 a:link {
     color: rgb(0, 91, 2);
     background-color: transparent;
@@ -34,7 +38,7 @@ a:active {
     background-color: rgb(5, 212, 9);
     text-align: center;
     font-size: 50px;
-    
+
 }
 
 .button {
@@ -43,12 +47,12 @@ a:active {
     padding: 2em;
     font-size: 85px;
     font-family: Aref Ruqaa;
-    background-color:rgb(129, 175, 125);
+    background-color: rgb(129, 175, 125);
     border: 15px double rgb(0, 91, 2);
 }
 
 .butt-on {
-    display:block;
+    display: block;
     margin: 2em;
     padding: 1em;
     font-size: medium;
@@ -58,7 +62,7 @@ a:active {
 }
 
 .ins-name {
-    width: fit-content;
+    width: 25%;
     padding: 1em;
     margin: 2em;
     border: 5px double black;
@@ -66,4 +70,98 @@ a:active {
     display: flex;
     flex-flow: column;
     font-size: larger;
+}
+
+.strt-game {
+    width: 25%;
+    padding: 1em;
+    margin: 2em;
+    border: 5px double black;
+    background-color: white;
+    display: flex;
+    flex-flow: column;
+    font-size: larger;
+}
+
+/* Slideshow container */
+.slideshow-container{
+    width: 50%;
+    height: 75%;
+    position: absolute;
+    padding-bottom: 1em;
+    display: block;
+    margin-left: 50%;
+    z-index: 1;
+
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(227, 227, 227, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: #000000;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #000000;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #6f6f6f;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #cbcbcb;
 }
