--- a/style.css
+++ b/style.css
@@ -165,3 +165,9 @@ a:active {
 .dot:hover {
     background-color: #cbcbcb;
 }
+
+.pls-work {
+    display: flex;
+    flex-flow: row;
+    flex-direction: column;
+}
