--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 html {
+    background-color: rgb(0, 23, 67);
+    font-family: 'Aref Ruqaa', serif;
+}
+
+.html1 {
     background-color: rgb(28, 0, 67);
     font-family: 'Aref Ruqaa', serif;
+    background-image: url("images/starbg.gif");
+}
+
+p, h2 {
+    color: #ffffff;
 }
 
 * {
@@ -13,163 +23,106 @@ a:link {
     text-decoration: none;
 }
 
-a:visited {
-    color: rgb(158, 5, 169);
-    background-color: transparent;
-    text-decoration: none;
-}
 
 a:hover {
     color: rgb(0, 91, 2);
     background-color: transparent;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:active {
     color: rgb(158, 5, 169);
     background-color: transparent;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .header {
     margin: .5em, 1em, .5em, 1em;
     padding: 1em;
-    border: 3px solid black;
-    background-color: rgb(5, 212, 9);
+    border: 10px groove rgb(216, 184, 40);
+    background-color: rgba(67, 17, 82, 0.822);
     text-align: center;
     font-size: 50px;
+    color: #ffffff;
 
 }
 
 .button {
     display: block;
     margin: .7em auto;
-    padding: 2em;
+    padding: .5em 3em;
     font-size: 85px;
     font-family: Aref Ruqaa;
-    background-color: rgb(129, 175, 125);
-    border: 15px double rgb(0, 91, 2);
+    background-color: rgb(211, 198, 11);
+    border: 15px double rgb(90, 91, 0);
 }
 
 .butt-on {
     display: block;
     margin: 2em;
-    padding: 1em;
-    font-size: medium;
+    padding: 1em 3em;
+    font-size: large;
     font-family: Aref Ruqaa;
-    background-color: rgb(129, 175, 125);
-    border: 5px double rgb(0, 91, 2);
+    background-color: rgb(211, 198, 11);
+    border: 5px double rgb(90, 91, 0);
 }
 
 .ins-name {
     width: 25%;
     padding: 1em;
     margin: 2em;
-    border: 5px double black;
-    background-color: white;
+    border: 5px double rgb(147, 127, 153);
+    background-color: rgb(36, 2, 46);
+    color: #ffffff;
     display: flex;
     flex-flow: column;
     font-size: larger;
+    align-items: center;
 }
 
 .strt-game {
     width: 25%;
     padding: 1em;
-    margin: 2em;
-    border: 5px double black;
-    background-color: white;
+    margin: 1.6em;
+    border: 5px double rgb(147, 127, 153);
+    background-color: rgb(36, 2, 46);
+    color:#ffffff;
     display: flex;
-    flex-flow: column;
-    font-size: larger;
+    align-items: center;
+    justify-content: space-around;
+    font-size:x-large;
 }
 
 .butt-o-n{
     display: block;
-    margin: 2em;
-    padding: 1em;
-    font-size: medium;
+    margin: 1em;
+    padding: 1em 2.5em;
+    font-size: large;
     font-family: Aref Ruqaa;
-    background-color: rgb(216, 225, 125);
-    border: 5px double rgb(122, 140, 6);
+    background-color:rgb(211, 198, 11);
+    border: 5px double rgb(90, 91, 0);
+}
+
+.textbox {
+    font-family: 'Aref Ruqaa', serif;
+    font-size: medium;
+    font-weight: 800;
 }
 
 /* Slideshow container */
 .slideshow-container{
-    width: 50%;
-    height: 75%;
+    width: 40%;
+    height: 112.5%;
     position: absolute;
     padding-bottom: 1em;
     display: block;
     margin-left: 50%;
     z-index: 1;
+    align-items: center;
+    color: #ffffff;
 
 }
 
-/* Hide the images by default */
-.mySlides {
-    display: none;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-    background-color: rgba(227, 227, 227, 0.8);
-}
-
-/* Caption text */
-.text {
-    color: #000000;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #000000;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #6f6f6f;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
 
 .active,
 .dot:hover {
@@ -183,45 +136,56 @@ a:active {
 }
 
 .gameplaytitle {
-    background-color: rgb(118, 97, 147);
+    background-color: rgba(118, 97, 147, 0.534);
     color: white;
     border: 2px solid #ffffff;
-    width: 279px;
-    padding: 0.3em 0.5em;
+    width: auto;
+    padding: 0.1em 0.5em;
     margin: 10px;
+    text-align: center;
+}
+
+.info {
+    color: #ffffff;
+    font-size: x-large;
+    text-align: center;
+    padding: 8em 3em 1em 3em;
+}
+
+.options {
+    font-family: 'Aref Ruqaa', serif;
+    font-size:xx-large;
+width: 100%;
+background-color: rgb(47, 25, 56);
+color: #ffffff;
 }
 
 .gameplaytext {
 
     overflow: hidden;
 color: white;
+font-size: x-large;
+padding: .5em;
+
 background-color:rgb(18, 0, 43);
-  border-right: .15em solid rgb(103, 109, 204);
   white-space: nowrap; 
-  margin-top: 350;
-  display: flex;
-  align-items: center;
+  margin-top: 35;
+  text-align: center;
   letter-spacing: .15em; 
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
-    width: 412px;
-    display: flex;
     
 }
-
-@keyframes typing {
-    from { width: 0 }
-    to { width: 412px }
-}
-
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: rgb(80, 113, 221); }
-}
-
 
 .hidden{
     display:none;
 }
+
+.backgrounds {
+
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  margin-top: 1em;
+}
+
 
