--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ h2 {
     box-sizing: border-box
 }
 
+em {
+    color: red;
+}
+
 a:link {
     color: rgb(0, 91, 2);
     background-color: transparent;
@@ -60,6 +64,16 @@ a:active {
     font-family: Aref Ruqaa;
     background-color: rgb(211, 198, 11);
     border: 15px double rgb(90, 91, 0);
+}
+
+.button2 {
+    display: block;
+    margin: 1em;
+    padding: .5em 1em;
+    font-size: medium;
+    font-family: Aref Ruqaa;
+    background-color: rgb(163, 138, 173);
+    border: 5px double rgb(71, 58, 75);
 }
 
 .butt-on {
